--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ task clean(type: Delete) {
 
 
 ext {
-    supportLibraryVersion = "27.1.1"
+    supportLibraryVersion = '1.0.1'
     firebaseVersion = "15.0.0"
     retrofitVersion = "2.4.0"
 }
