dependency for andoridx testing added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,8 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
 
+    testOptions.unitTests.includeAndroidResources = true
+
     dataBinding {
         enabled = true
     }
@@ -70,15 +72,23 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 
     // Testing dependencies
+    testImplementation 'androidx.test:rules:1.1.1'
+
+    testImplementation 'org.robolectric:robolectric:4.1'
+    testImplementation 'androidx.test:runner:1.1.1'
+    testImplementation 'androidx.test.ext:junit:1.1.0'
+    testImplementation "androidx.test.espresso:espresso-intents:$rootProject.espressoVersion"
+    testImplementation "androidx.test.espresso:espresso-core:$rootProject.espressoVersion"
+    testImplementation 'androidx.test.ext:truth:1.1.0'
+
+
     androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$rootProject.espressoVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$rootProject.espressoVersion"
     androidTestImplementation "androidx.test.espresso:espresso-intents:$rootProject.espressoVersion"
-    testImplementation "junit:junit:$rootProject.junitVersion"
-
-    testImplementation 'androidx.test:rules:1.1.1'
     androidTestImplementation "androidx.test.ext:junit:1.1.0"
-    testImplementation 'org.robolectric:robolectric:4.0'
-
+    androidTestImplementation "androidx.test:runner:1.1.1"
+    androidTestImplementation "androidx.test.ext:truth:1.1.0"
 }
+
 
